--- a/app/views/pages/resume.html.haml
+++ b/app/views/pages/resume.html.haml
@@ -22,12 +22,13 @@
           .subheader Junior Software Developer
           .details FreshStart Software &bull; June 2015 - December 2016
         %ul
-          %li Test Driven Development &bull;
-          %li Git Version Management
-        %ul
           %li Agile Development &bull;
           %li Jquery &bull;
-          %li Ruby on rails &bull;
+          %li Ruby on rails
+        %ul
+          %li Test Driven Development
+          %li Git Version Management
+        %ul
           %li Bootstrap
       .sub
         %p
@@ -36,8 +37,8 @@
         %ul
           %li Ruby on rails &bull;
           %li Jquery &bull;
-          %li Mysql
-          %li Html
+          %li Mysql &bull;
+          %li HTML
         %ul
           %li Healthy Client Relationships
         %ul
@@ -53,7 +54,7 @@
           %li Mysql
         %ul
           %li Git Version Management &bull;
-          %li Html
+          %li HTML
     %h1 Technical Experience
     .category
       .sub
@@ -63,15 +64,15 @@
         %ul
           %li Ruby on rails &bull;
           %li Responsive Web Design &bull;
-          %li HTML &bull;
+          %li HTML
           %li CSS
       .sub
         %p
           .subheader Java Programs
           .details= link_to 'https://github.com/lukepfeiffer/java_programs', 'https://github.com/lukepfeiffer/java_programs', target: '_blank'
         %ul
-          %li Design Patterns &bull;
-          %li Object Oriented Programming &bull;
+          %li Design Patterns
+          %li Object Oriented Programming
           %li Well Documented Code
       .sub
         %p
@@ -89,8 +90,8 @@
           .subheader Target Zero
           .details= link_to 'http://www.target-zero.org/', 'http://www.target-zero.org/', target: '_blank'
         %ul
-          %li Configure Postgresql Database &bull;
-          %li Dynamic CMS
+          %li Dynamic CMS &bull;
+          %li Configure Postgresql Database
         %ul
           %li Google Maps API Calls &bull;
           %li Ruby on Rails
@@ -137,10 +138,10 @@
           .subheader Web and Graphic Design Chair
           .details Association of Computer Engineers &bull; December 2016 - Present
         %ul
-          %li Organize and Present Workshops &bull;
+          %li Organize and Present Workshops
           %li Design Promotional Flyers
         %ul
-          %li Update Website &bull;
+          %li Update Website
           %li Build External Webapps for Organization
       .sub
         %p
@@ -194,8 +195,4 @@
           .subheader Volunteer Web Developer
           .details DESC of Jacksonville &bull; November 2015 - March 2016
         %ul
-          %li Helped improve existing functions and deploy new functions to
-        %ul
-          %li an organization's web application. DESC provides services for
-        %ul
-          %li the homeless and those in need.
+          Helped improve existing functions and deploy new functions to the organization's web application.  DESC provides services for the homeless and those in need.
