--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -370,6 +370,9 @@
 
     h1{
       font-size: 20px;
+      margin-bottom: 1em;
+      margin-top: 2em;
+      text-decoration: underline;
     }
 
     .header{
@@ -394,7 +397,7 @@
       justify-content: flex-start;
 
       .subheader{
-        font-size: 18px;
+        font-size: 16px;
         margin-bottom: 5px;
       }
 
@@ -409,15 +412,17 @@
       }
 
       .sub{
+        width: 375px;
         padding: 2px 1em 1em 1em;
         border: 1px solid lighten(#ccc, 5%);
         border-radius: 3px;
-        margin-bottom: 0.5em;
-        margin-right: 0.5em;
+        margin-bottom: 1.0em;
+        margin-right: 1.0em;
         ul{
           padding: 0;
           margin: 0;
           list-style: none;
+          line-height: 30px;
 
           display: -webkit-box;
           display: -moz-box;
