--- a/app/views/pages/resume.html.haml
+++ b/app/views/pages/resume.html.haml
@@ -55,34 +55,6 @@
         %ul
           %li Git Version Management &bull;
           %li HTML
-    %h1 Technical Experience
-    .category
-      .sub
-        %p
-          .subheader Personal Website
-          .details https://lukerpfeiffer.com
-        %ul
-          %li Ruby on rails &bull;
-          %li Responsive Web Design &bull;
-          %li HTML
-          %li CSS
-      .sub
-        %p
-          .subheader Java Programs
-          .details= link_to 'https://github.com/lukepfeiffer/java_programs', 'https://github.com/lukepfeiffer/java_programs', target: '_blank'
-        %ul
-          %li Design Patterns
-          %li Object Oriented Programming
-          %li Well Documented Code
-      .sub
-        %p
-          .subheader ACE Workshops
-          .details= link_to 'http://aceworkshops.herokuapp.com/', 'http://aceworkshops.herokuapp.com/', target: '_blank'
-        %ul
-          %li Configure Postgresql Database &bull;
-          %li Dynamic CMS &bull;
-          %li Pagination &bull;
-          %li Ruby on Rails
     %h1 Projects
     .category
       .sub
@@ -90,7 +62,7 @@
           .subheader Target Zero
           .details= link_to 'http://www.target-zero.org/', 'http://www.target-zero.org/', target: '_blank'
         %ul
-          %li Dynamic CMS &bull;
+          %li Dynamic CMS
           %li Configure Postgresql Database
         %ul
           %li Google Maps API Calls &bull;
@@ -131,6 +103,15 @@
           %li Test Driven Development
         %ul
           %li Jquery
+      .sub
+        %p
+          .subheader Personal Website
+          .details https://lukerpfeiffer.com
+        %ul
+          %li Ruby on rails &bull;
+          %li Responsive Web Design &bull;
+          %li HTML
+          %li CSS
     %h1 Involvement
     .category
       .sub
@@ -149,6 +130,14 @@
           .details Association of Computer Engineers &bull; January 2017 - Present
         %ul
           %li Teach Java &bull;
+          %li Organize Workshops &bull;
+          %li Resume Critiques
+      .sub
+        %p
+          .subheader IgniteCs Mentor
+          .details Google IgniteCs program &bull; January 2017 - Present
+        %ul
+          %li Mentored disadvantaged youth
           %li Organize Workshops &bull;
           %li Resume Critiques
     %h1 Programming Proficiencies
@@ -171,7 +160,7 @@
           %li Reactjs (novice)
       .sub
         %p
-          .subheader Other Development
+          .subheader Software Development
           .details August 2016 - Present
         %ul
           %li Java &bull;
@@ -180,7 +169,7 @@
           %li Sql (novice)
       .sub
         %p
-          .subheader Misc Skills
+          .subheader General Skills
           .details September 2013 - Present
         %ul
           %li Git Version Management &bull;
