Update resume page

--- a/app/views/pages/resume.html.haml
+++ b/app/views/pages/resume.html.haml
@@ -138,8 +138,8 @@
           .details Google IgniteCs program &bull; January 2017 - Present
         %ul
           %li Mentored disadvantaged youth
-          %li Organize Workshops &bull;
-          %li Resume Critiques
+          %li Creative problem solving
+          %li Employed positive reinforcement
     %h1 Programming Proficiencies
     .category
       .sub
