--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -27,11 +27,11 @@
     %nav.footer{role: 'contentinfo'}
       .links
         .social
-          = link_to 'https://www.github.com/lukepfeiffer', class: 'github' do
+          = link_to 'https://www.github.com/lukepfeiffer', class: 'github', target: '_blank' do
             %i.fa.fa-github-square
-          = link_to 'https://www.linkedin.com/in/lukerpfeiffer/', class: 'linkedin' do
+          = link_to 'https://www.linkedin.com/in/lukerpfeiffer/', class: 'linkedin', target: "_blank" do
             %i.fa.fa-linkedin-square
-          = link_to 'https://www.facebook.com/luke.pfeiffer.7', class: 'facebook' do
+          = link_to 'https://www.facebook.com/luke.pfeiffer.7', class: 'facebook', target: '_blank' do
             %i.fa.fa-facebook-square
-          = link_to 'https://www.twitter.com/lukerpfeiffer', class: 'twitter' do
+          = link_to 'https://www.twitter.com/lukerpfeiffer', class: 'twitter', target: '_blank' do
             %i.fa.fa-twitter-square
