--- a/app/views/pages/contact.html.haml
+++ b/app/views/pages/contact.html.haml
@@ -16,4 +16,4 @@
       %span.details= link_to 'lukepfeiffer', 'https://github.com/lukepfeiffer', target: '_blank'
     %p.subheader
       %span.bold Linkedin:
-      %span.details= link_to 'Luke Pfeiffer', 'https://www.linkedin.com/in/luke-pfeiffer-a4a272133', target: '_blank'
+      %span.details= link_to 'Luke Pfeiffer', 'https://www.linkedin.com/in/lukerpfeiffer/', target: '_blank'
