Update resume page

--- a/app/views/pages/resume.html.haml
+++ b/app/views/pages/resume.html.haml
@@ -37,7 +37,7 @@
         %ul
           %li Ruby on rails &bull;
           %li Jquery &bull;
-          %li Mysql &bull;
+          %li CSS &bull;
           %li HTML
         %ul
           %li Healthy Client Relationships
@@ -50,7 +50,7 @@
           .details Orbital One &bull; March 2017 - Present
         %ul
           %li Ruby on rails &bull;
-          %li Minitest &bull;
+          %li Rspec &bull;
           %li Mysql
         %ul
           %li Git Version Management &bull;
