--- a/app/views/pages/resume.html.haml
+++ b/app/views/pages/resume.html.haml
@@ -35,7 +35,7 @@
           .details Indepedent Development &bull; August 2016 - Present
         %ul
           %li Ruby on rails &bull;
-          %li Jquery &bull;
+          %li jQuery &bull;
           %li CSS &bull;
           %li HTML
         %ul
@@ -48,8 +48,8 @@
           .details FreshStart Software &bull; June 2015 - October 2016
         %ul
           %li Agile Development &bull;
-          %li Jquery &bull;
-          %li Ruby on rails
+          %li jQuery &bull;
+          %li Ruby
         %ul
           %li Test Driven Development
           %li Git Version Management
@@ -59,6 +59,16 @@
     .category
       .sub
         %p
+          .subheader Groundswell
+          .details= link_to 'https://app.groundswell.online/', 'https://app.groundswell.online/', target: '_blank'
+        %ul
+          %li Test Driven Development
+          %li JSON Web Token Integration
+        %ul
+          %li jQuery &bull;
+          %li Ruby
+      .sub
+        %p
           .subheader Target Zero
           .details= link_to 'http://www.target-zero.org/', 'http://www.target-zero.org/', target: '_blank'
         %ul
@@ -66,17 +76,17 @@
           %li Configure Postgresql Database
         %ul
           %li Google Maps API Calls &bull;
-          %li Ruby on Rails
+          %li Ruby
       .sub
         %p
           .subheader Smart Pharamcy
           .details= link_to 'https://smartpharmacy.com/', 'https://smartpharmacy.com/', target: '_blank'
         %ul
           %li Twilio Messaging &bull;
-          %li Jquery &bull;
+          %li jQuery &bull;
           %li PDF Generations
         %ul
-          %li Ruby on Rails
+          %li Ruby
       .sub
         %p
           .subheader DESC of Jacksonville
@@ -86,31 +96,31 @@
           %li Refactoring
         %ul
           %li Information Encryption &bull;
-          %li Ruby on Rails
+          %li Ruby
       .sub
         %p
           .subheader Destyn Patera
           .details= link_to 'http://destynpatera.com/', 'http://destynpatera.com/', target: '_blank'
         %ul
           %li Responsive Web Design &bull;
-          %li Jquery &bull;
-          %li Ruby on Rails
+          %li jQuery &bull;
+          %li Ruby
       .sub
         %p
           .subheader Comment Catcher
         %ul
-          %li Ruby on Rails &bull;
           %li Test Driven Development
         %ul
-          %li Jquery
+          %li Ruby &bull;
+          %li jQuery
       .sub
         %p
           .subheader Personal Website
           .details https://lukerpfeiffer.com
         %ul
-          %li Ruby on rails &bull;
           %li Responsive Web Design &bull;
-          %li HTML
+          %li Ruby &bull;
+          %li HTML &bull;
           %li CSS
     %h1 Involvement
     .category
@@ -119,7 +129,7 @@
           .subheader Web and Graphic Design Chair
           .details Association of Computer Engineers &bull; December 2016 - Present
         %ul
-          %li Organize and Present Workshops
+          %li Organize and present workshops
           %li Design Promotional Flyers
         %ul
           %li Update Website
@@ -137,46 +147,46 @@
           .subheader IgniteCs Mentor
           .details Google IgniteCs program &bull; March 2017 - Present
         %ul
-          %li Mentored disadvantaged youth
+          %li Mentor disadvantaged youth
           %li Creative problem solving
-          %li Employed positive reinforcement
+          %li Positive reinforcement
     %h1 Programming Proficiencies
     .category
       .sub
         %p
           .subheader Web Development
-          .details September 2013 - Present
         %ul
           %li Ruby on Rails &bull;
-          %li Jquery &bull;
+          %li jQuery &bull;
           %li HTML &bull;
-          %li Bootstrap
+          %li Haml
         %ul
           %li CSS &bull;
-          %li Bourbon &bull;
-          %li Rspec &bull;
-          %li Cucumber
-        %ul
-          %li Reactjs (novice)
+          %li SASS &bull;
+          %li Bourbon
       .sub
         %p
           .subheader Software Development
-          .details August 2016 - Present
         %ul
           %li Java &bull;
+          %li Ruby &bull;
           %li Eclipse IDE &bull;
           %li JUnit &bull;
           %li Sql (novice)
+        %ul
+          %li RSpec &bull;
+          %li Cucumber
       .sub
         %p
           .subheader General Skills
-          .details September 2013 - Present
         %ul
           %li Git Version Management &bull;
           %li Terminal
         %ul
           %li Agile Development &bull;
           %li Working in Teams
+        %ul
+          %li Test Driven Development
     %h1 Volunteering
     .category
       .sub
