--- a/app/views/pages/resume.html.haml
+++ b/app/views/pages/resume.html.haml
@@ -20,6 +20,17 @@
 
       .sub
         %p
+          .subheader Software Developer, Intern
+          .details Groundswell &bull; May 2017 - Present
+        %ul
+          %li Ruby on rails &bull;
+          %li Rspec &bull;
+          %li Postgresql
+        %ul
+          %li Git Version Management
+          %li Test Driven Development
+      .sub
+        %p
           .subheader Software Developer
           .details Orbital One &bull; March 2017 - Present
         %ul
@@ -28,7 +39,8 @@
           %li Mysql
         %ul
           %li Git Version Management &bull;
-          %li HTML
+          %li HTML &bull;
+          %li OAuth
       .sub
         %p
           .subheader Web Developer
@@ -49,7 +61,7 @@
         %ul
           %li Agile Development &bull;
           %li jQuery &bull;
-          %li Ruby
+          %li Ruby on Rails
         %ul
           %li Test Driven Development
           %li Git Version Management
@@ -66,7 +78,7 @@
           %li JSON Web Token Integration
         %ul
           %li jQuery &bull;
-          %li Ruby
+          %li Ruby on Rails
       .sub
         %p
           .subheader Target Zero
@@ -76,7 +88,7 @@
           %li Configure Postgresql Database
         %ul
           %li Google Maps API Calls &bull;
-          %li Ruby
+          %li Ruby on Rails
       .sub
         %p
           .subheader Smart Pharamcy
@@ -86,7 +98,7 @@
           %li jQuery &bull;
           %li PDF Generations
         %ul
-          %li Ruby
+          %li Ruby on Rails
       .sub
         %p
           .subheader DESC of Jacksonville
@@ -96,7 +108,7 @@
           %li Refactoring
         %ul
           %li Information Encryption &bull;
-          %li Ruby
+          %li Ruby on Rails
       .sub
         %p
           .subheader Destyn Patera
@@ -104,14 +116,14 @@
         %ul
           %li Responsive Web Design &bull;
           %li jQuery &bull;
-          %li Ruby
+          %li Ruby on Rails
       .sub
         %p
           .subheader Comment Catcher
         %ul
           %li Test Driven Development
         %ul
-          %li Ruby &bull;
+          %li Ruby on Rails &bull;
           %li jQuery
       .sub
         %p
@@ -119,7 +131,7 @@
           .details https://lukerpfeiffer.com
         %ul
           %li Responsive Web Design &bull;
-          %li Ruby &bull;
+          %li Ruby on Rails
           %li HTML &bull;
           %li CSS
     %h1 Involvement
