--- a/app/views/pages/resume.html.haml
+++ b/app/views/pages/resume.html.haml
@@ -149,7 +149,7 @@
       .sub
         %p
           .subheader Mentor
-          .details Association of Computer Engineers &bull; January 2017 - Present
+          .details Association of Computer Engineers &bull; January 2017 - May 2017
         %ul
           %li Teach Java &bull;
           %li Organize Workshops &bull;
@@ -157,7 +157,7 @@
       .sub
         %p
           .subheader IgniteCs Mentor
-          .details Google IgniteCs program &bull; March 2017 - Present
+          .details Google IgniteCs program &bull; March 2017 - May 2017
         %ul
           %li Mentor disadvantaged youth
           %li Creative problem solving
