--- a/app/views/pages/resume.html.haml
+++ b/app/views/pages/resume.html.haml
@@ -75,7 +75,7 @@
           .details= link_to 'https://app.groundswell.online/', 'https://app.groundswell.online/', target: '_blank'
         %ul
           %li Test Driven Development
-          %li JSON Web Token Integration
+          %li Android Studios Development
         %ul
           %li jQuery &bull;
           %li Ruby on Rails
