--- a/app/views/pages/resume.html.haml
+++ b/app/views/pages/resume.html.haml
@@ -29,6 +29,8 @@
         %ul
           %li Git Version Management
           %li Test Driven Development
+        %ul
+          %li Android Studios Development
       .sub
         %p
           .subheader Software Developer
@@ -75,7 +77,7 @@
           .details= link_to 'https://app.groundswell.online/', 'https://app.groundswell.online/', target: '_blank'
         %ul
           %li Test Driven Development
-          %li Android Studios Development
+          %li JSON Web Token Integration
         %ul
           %li jQuery &bull;
           %li Ruby on Rails
