--- a/app/views/pages/resume.html.haml
+++ b/app/views/pages/resume.html.haml
@@ -11,7 +11,7 @@
     .category
       .sub
         %p
-          .subheader Pursuing BA in Computer Engineering
+          .subheader Pursuing BS in Computer Engineering
           .details University of Florida &bull; May 2020 &bull; GPA: 3.8
         %ul
           %li COP3502
