--- a/app/views/pages/resume.html.haml
+++ b/app/views/pages/resume.html.haml
@@ -150,7 +150,15 @@
           %li Build External Webapps for Organization
       .sub
         %p
-          .subheader Mentor
+          .subheader IgniteCs Historian
+          .details Google IgniteCs program &bull; March 2017 - May 2017
+        %ul
+          %li Maintained documentation of events
+          %li Developed caring relationships with mentees
+          %li Created surveys
+      .sub
+        %p
+          .subheader ACE Mentor
           .details Association of Computer Engineers &bull; January 2017 - May 2017
         %ul
           %li Teach Java &bull;
